feat: :sparkles: 代码美化

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "jetbrains",
         "lucide",
         "mdsvex",
-        "neoconfetti"
+        "neoconfetti",
+        "rehype",
+        "shiki"
     ]
 }
