--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@fontsource/fira-mono": "^5.0.8",
+		"@fontsource/fira-mono": "^5.0.12",
 		"@neoconfetti/svelte": "^2.2.1",
 		"@sveltejs/adapter-auto": "^3.1.1",
 		"@sveltejs/kit": "^2.5.2",
@@ -21,17 +21,18 @@
 		"eslint-plugin-svelte": "^2.35.1",
 		"mdsvex": "^0.11.0",
 		"prettier": "^3.2.5",
-		"prettier-plugin-svelte": "^3.2.1",
+		"prettier-plugin-svelte": "^3.2.2",
 		"svelte": "^4.2.12",
-		"svelte-check": "^3.6.4",
+		"svelte-check": "^3.6.6",
 		"typescript": "^5.3.3",
-		"vite": "^5.1.4"
+		"vite": "^5.1.5"
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource/jetbrains-mono": "^5.0.18",
-		"@fontsource/manrope": "^5.0.18",
-		"lucide-svelte": "^0.341.0",
+		"@fontsource/jetbrains-mono": "^5.0.19",
+		"@fontsource/manrope": "^5.0.19",
+		"@giscus/svelte": "^3.0.0",
+		"lucide-svelte": "^0.344.0",
 		"open-props": "^1.6.20",
 		"rehype-slug": "^6.0.0",
 		"remark-toc": "^9.0.0",
